--- a/config/application.yml
+++ b/config/application.yml
@@ -11,8 +11,10 @@ spring:
     properties:
       hibernate:
         globally_quoted_identifiers: true
+        show_sql: false
         jdbc:
           time_zone: UTC
+    show-sql: false
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yml
