1397: The name of the uploaded file should only show one under New Benefit Plan page (#645)
The name of the uploaded file should only show one in benefit plan

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -39,7 +39,7 @@ cloud:
       auto: false
 
 aws:
-  bucketName: shamu-hrs-qa-company
+  bucketName: simplyhired-hrs-eastbay-dev-company
   folder: media-local
 
 
