--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <jacoco.outputDir>target/jacoco-output</jacoco.outputDir>
+    <jacoco.reportPath>${jacoco.outputDir}/jacoco-tests.exec</jacoco.reportPath>
   </properties>
 
   <dependencies>
@@ -71,6 +73,10 @@
         <exclusion>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -232,6 +238,24 @@
       <artifactId>jackson-annotations</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.vorburger.mariaDB4j</groupId>
+      <artifactId>mariaDB4j</artifactId>
+      <version>2.4.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>2.5.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
@@ -287,6 +311,70 @@
       </plugin>
 
       <plugin>
+        <groupId>ch.vorburger.mariaDB4j</groupId>
+        <artifactId>mariaDB4j-maven-plugin</artifactId>
+        <version>2.4.0</version>
+        <executions>
+          <execution>
+            <id>start embedded database</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+            <configuration>
+              <port>3309</port>
+              <databaseName>hrs-test</databaseName>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop embedded database</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.9.1</version>
+        <executions>
+          <execution>
+            <id>add-integration-test-sources</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <!-- Configures the source directory of our integration tests -->
+              <sources>
+                <source>src/integration-test/java</source>
+              </sources>
+            </configuration>
+          </execution>
+          <!-- Add a new resource directory to our build -->
+          <execution>
+            <id>add-integration-test-resources</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>add-test-resource</goal>
+            </goals>
+            <configuration>
+              <!-- Configures the resource directory of our integration tests -->
+              <resources>
+                <resource>
+                  <filtering>true</filtering>
+                  <directory>src/integration-test/resources</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.0.0</version>
@@ -326,18 +414,59 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.4</version>
+        <configuration>
+          <excludes>
+            <exclude>**/entity/**</exclude>
+            <exclude>**/dto/*</exclude>
+            <exclude>**/exception/*</exclude>
+            <exclude>**/annotations/*</exclude>
+            <exclude>**/pojo/*</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
+            <id>default-prepare-agent</id>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
+            <configuration>
+              <propertyName>maven.surefire.argLine</propertyName>
+              <destFile>${jacoco.reportPath}</destFile>
+            </configuration>
           </execution>
           <execution>
-            <id>generate-code-coverage-report</id>
+            <id>generate unit test code coverage report</id>
             <phase>test</phase>
             <goals>
               <goal>report</goal>
             </goals>
+            <configuration>
+              <dataFile>${jacoco.reportPath}</dataFile>
+              <outputDirectory>${jacoco.outputDir}/coverage-report-unit-tests</outputDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-prepare-agent-integration</id>
+            <goals>
+              <goal>prepare-agent-integration</goal>
+            </goals>
+            <configuration>
+              <propertyName>maven.failsafe.argLine</propertyName>
+              <!-- Append to the unit test dest file -->
+              <destFile>${jacoco.reportPath}</destFile>
+              <append>true</append>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate integration tests and unit tests code coverage report</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <dataFile>${jacoco.reportPath}</dataFile>
+              <outputDirectory>${jacoco.outputDir}/coverage-report-all-in-one</outputDirectory>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -345,11 +474,19 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <!--suppress MavenModelInspection -->
+          <argLine>${maven.surefire.argLine}</argLine>
+        </configuration>
       </plugin>
 
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <!--suppress MavenModelInspection -->
+          <argLine>${maven.failsafe.argLine}</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
